--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <section id="profile" class="row">
                 <div class="offset1 span12">
                     <h2>Profile</h2>
-                    <p>A highly experienced and resourceful developer, combining passion with creativity, 
+                    <p>A professional, highly experienced and resourceful web developer, combining passion with creativity, 
                         who loves to ship and does so consistently under demanding conditions.</p>
                 </div>
             </section>
