--- a/index.html
+++ b/index.html
@@ -188,8 +188,10 @@
     ==========================================================================================
     -->
     <script type="text/template" id="home-template">
-    <div class="page-header">
-        <h1>Oh, hello there! <small>Welcome to my humble abode!</small></h1>
+    <div class="hero-unit">
+        <h1>Oh, hello there! :)</h1>
+        
+        <p>Welcome, to my humble abode!</p>
     </div>
     
     <section id="about" class="row">
