Added home link to nav

--- a/index.html
+++ b/index.html
@@ -482,6 +482,7 @@
                 <a href="#" class="brand">Steve Winton</a>
                 <small class="tagline">I program my home computer, beam myself into the future</small>
                 <ul class="nav">
+                    <li><a href="#">Home</a></li>
                     <li><a href="#!/resume">R&#233;sum&#233;</a></li>
                     <li><a href="#!/contact">Contact</a></li>
                 </ul>
