Updated index.html - new copy in Recent projects section

--- a/index.html
+++ b/index.html
@@ -346,9 +346,9 @@
             </ul>
             <h3>O2 &mdash; &#8216;National Treasures&#8217; &mdash; Facebook app <small>August 2011</small></h3>
             <ul>
-                <li>A Facebook app, where user-submitted national treasures were pitted against each other in a &#8216;Hot or Not&#8217; style face-off;</li>
-                <li>Building a valuable &#8216;preferences database&#8217; for players in the background;</li>
-                <li>Data mining and visualization of participants in order to uncover new insights, and inform future campaigns;</li>
+                <li>A Facebook app, pitting user-submitted national treasures against each other in a &#8216;Hot or Not&#8217; style face-off;</li>
+                <li>Received 144,000 game plays from 14,000 Facebook users in 12 weeks;</li>
+                <li>Data mining and visualization of the &#8216;user preferences database&#8217; employed to uncover new insights, and inform future campaigns;</li>
                 <li>nginx, Python, Django, MySQL, HTML, jQuery, Facebook API, Amazon EC2;</li>
                 <li><span class="label warning">Offline</span> <a class="disabled" href="">http://apps.facebook.com/national-treasures/</a>.</li>
             </ul>
