Modified index.html js/app.js

--- a/index.html
+++ b/index.html
@@ -336,23 +336,23 @@
     <section id="recent-projects" class="row">
         <div class="offset1 span12">
             <h2>Recent projects</h2>
-            <h3>Channel 4 &mdash; &#8216;Drugs Live: Ecstasy on Trial&#8217; &mdash; HTML5 game <small>January 2012</small></h3>
+            <h3><a href="http://www.channel4.com/" title="Channel 4 - a major UK broadcaster">Channel 4</a> &mdash; &#8216;Drugs Live: Ecstasy on Trial&#8217; &mdash; HTML5 game <small>February 2012</small></h3>
             <ul>
                 <li>An interactive cognitive test, to be used alongside a new Channel 4 documentary exploring the physiological effects of taking ecstasy;</li>
-                <li>Allowing viewers to participate in a nationwide scientific test, replicating the in-studio experience;</li>
+                <li>Allows viewers to participate in a nationwide scientific test, replicating the in-studio experience;</li>
                 <li>Front-end built in HTML5/JavaScript, maximising penetration on target platforms (desktop, iOS, Android);</li>
                 <li>nginx, Python, Django, MySQL, HTML5, JavaScript, jQuery, Backbone.js, Amazon EC2;</li>
-                <li><span class="label success">New!</span> Launching January 2012.</li>
+                <li><span class="label success">New!</span> Launching February 2012.</li>
             </ul>
-            <h3>O2 &mdash; &#8216;National Treasures&#8217; &mdash; Facebook app <small>August 2011</small></h3>
+            <h3><a href="http://www.o2.co.uk/" title="O2 - a major UK telecomms provider">O2</a> &mdash; &#8216;National Treasures&#8217; &mdash; Facebook app <small>August 2011</small></h3>
             <ul>
-                <li>A Facebook app, pitting user-submitted national treasures against each other in a &#8216;Hot or Not&#8217; style face-off;</li>
+                <li>A Facebook app, commissioned by a major UK telecomms provider to support the launch of a new product, where user-submitted &#8216;national treasures&#8217; were pitted against each other in a &#8216;Hot or Not&#8217; style face-off;</li>
                 <li>Received 144,000 game plays from 14,000 Facebook users in 12 weeks;</li>
                 <li>Data mining and visualization of the &#8216;user preferences database&#8217; employed to uncover new insights, and inform future campaigns;</li>
                 <li>nginx, Python, Django, MySQL, HTML, jQuery, Facebook API, Amazon EC2;</li>
                 <li><span class="label warning">Offline</span> <a class="disabled" href="">http://apps.facebook.com/national-treasures/</a>.</li>
             </ul>
-            <h3>Channel 4 &mdash; The Promise &#8216;Twitter Tracker&#8217; &mdash; Twitter visualization <small>February 2011</small></h3>
+            <h3><a href="http://www.channel4.com/" title="Channel 4 - a major UK broadcaster">Channel 4</a> &mdash; The Promise &#8216;Twitter Tracker&#8217; &mdash; Twitter visualization <small>February 2011</small></h3>
             <ul>
                 <li>Capturing and visualizing opinions and reactions on Twitter to Channel 4&#8217;s controversial drama, <a href="http://www.channel4.com/programmes/the-promise/">The Promise</a>, in real-time (<a href="http://www.slideshare.net/stevewinton/visualising-conversation-around-c4thepromise">Slideshare presentation</a>);</li>
                 <li>Using natural language and clustering algorithms to detect trends and topics in the online conversation, and encouraging exploration interactively on Channel4.com;</li>
